add trading pages

--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
             <div class="col">
               <div class="partner-wrapper">
 
-                <div class="partner-row-list">
+                <div class="partner-row-list partner-row-list--1">
                   <div class="partner-row">
                     <div class="partner-row__item">
                       <div class="partner-row__item__head">
-                        <div class="partner-row__item__head--icon">
+                        <div class="partner-row__item__head--icon -orange -md">
                           <img src="/images/icons/status-up.svg" alt="status-up">
                         </div>
 
@@ -136,8 +136,8 @@
                     </div>
                     <div class="partner-row__item">
                       <div class="partner-row__item__head">
-                        <div class="partner-row__item__head--icon">
-                          <img src="/images/icons/status-up.svg" alt="status-up">
+                        <div class="partner-row__item__head--icon -orange -md">
+                          <img src="/images/icons/bitcoin-convert.svg" alt="bitcoin-convert">
                         </div>
 
                         <h2 class="text text--lg color--black">Digital Assets</h2>
@@ -152,8 +152,8 @@
                   <div class="partner-row">
                     <div class="partner-row__item">
                       <div class="partner-row__item__head">
-                        <div class="partner-row__item__head--icon">
-                          <img src="/images/icons/status-up.svg" alt="status-up">
+                        <div class="partner-row__item__head--icon -orange -md">
+                          <img src="/images/icons/coin.svg" alt="coin">
                         </div>
 
                         <h2 class="text text--lg color--black">Currency Exchange</h2>
@@ -165,8 +165,8 @@
                     </div>
                     <div class="partner-row__item">
                       <div class="partner-row__item__head">
-                        <div class="partner-row__item__head--icon">
-                          <img src="/images/icons/status-up.svg" alt="status-up">
+                        <div class="partner-row__item__head--icon -orange -md">
+                          <img src="/images/icons/global-search.svg" alt="global-search">
                         </div>
 
                         <h2 class="text text--lg color--black">Global Markets</h2>
