--- a/shares-and-stocks.html
+++ b/shares-and-stocks.html
@@ -55,15 +55,15 @@
     </header>
 
     <main>
-      <section class="hero forex-trading-hero">
+      <section class="hero shares-and-stocks-hero">
         <div class="container">
           <div class="row">
             <div class="col col-12 col-md-9 col-lg-8 col-xl-6">
               <div class="title-group">
-                <h1 class="title color--white">Forex Trading</h1>
+                <h1 class="title color--white">Shares & Stocks</h1>
 
                 <p class="text color--gray">
-                  Trade CFDs on 70+ FX pairs and benefit from tight spreads and fast order execution
+                  Trade CFDs on thousands of global shares and benefit from ultra-fast order execution.
                 </p>
 
                 <a href="#" class="btn btn--lg btn--arrow -responsive">Registration</a>
@@ -76,6 +76,28 @@
       <section>
         <div class="container">
           widget
+        </div>
+      </section>
+
+      <section class="shares">
+        <div class="container">
+          <div class="row">
+            <div class="col col-12 col-lg-10 col-xl-8">
+              <div class="title-group mb-20px">
+                <h2 class="title title--md color--white">
+                  Did you know you can sell shares without owning them?
+                </h2>
+
+                <p class="text text--md color--light-gray">
+                  At FxPro, you can not only buy shares but also sell them without having to purchase the underlying
+                  share. This is because everything we offer are CFDs, which allow you to speculate on the price
+                  movements of an instrument without physically owning the underlying asset.
+                </p>
+              </div>
+
+              <a href="#" class="btn btn--lg btn--arrow -responsive text-start ps-4">Start trading shares from the US, UK & EU</a>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -408,111 +430,133 @@
           <div class="row mb-20px">
             <div class="col">
               <div class="bg-block bg-block--inline bg-block--sm bg-block--orange">
-                <p class="text text--sm color--black">What is Forex?</p>
+                <p class="text text--sm color--black">What Are Shares?</p>
               </div>
             </div>
           </div>
 
           <div class="row mb-40px">
-            <div class="col">
-              <p class="text text--extra-lg color--white">
-                The foreign exchange market (FX) as a whole, consists of many types of markets, including Spot FX, Future
-                derivatives, Forward Derivatives, and finally the CFD derivatives market, which is the most popular for
-                retail clients.
-              </p>
-            </div>
-          </div>
-
-          <div class="row mb-40px">
             <div class="col col-12 col-lg-6 mb-2 mb-lg-0">
-              <p class="text text--extra-md color--light-gray mb-3">
-                All forex trading transactions combined make up the largest and most liquid financial market, with an
-                average daily volume of over $5 trillion.
-              </p>
+              <div class="row">
+                <div class="col col-12 mb-20px">
+                  <h5 class="text text--lg color--white mb-10px">What are CFDs</h5>
+                  <p class="text text--extra-md color--light-gray mb-3">
+                    The CFD market was developed in the early 90s, mainly to attract exchange speculators with a small
+                    capital to shares trading.
+                  </p>
+                  <p class="text text--extra-md color--light-gray mb-3">
+                    Initially, it was impossible to trade stocks without registration of ownership of the given asset.
+                    Over time, to make this market more accessible, Contracts For Difference were introduced for trading
+                    financial instruments, basic goods, and other various exchange instruments.
+                  </p>
+                  <p class="text text--extra-md color--light-gray mb-3">
+                    CFD is a Contract For the Difference in prices. It’s a financial instrument that’s used to buy
+                    shares online. Stock trading is possible due to the price going up or down, which traders use to
+                    open “Buy” or speculation on the fluctuations in the prices, without the ownership of the securities
+                    themselves. Typically the price of the contract for buying shares online is not fixed and changes
+                    all the time.
+                  </p>
+                  <p class="text text--extra-md color--light-gray">
+                    Trading CFD on shares allows traders to place both long and short positions to benefit from a price
+                    rise or fall respectively. Securities reflect corporate actions, so traders are entitled to dividend
+                    payments when going long, and incur dividend charges when going short.
+                  </p>
+                  <p class="text text--extra-md color--light-gray">
+                    Online trading is one of the most popular methods of investment. At FxPro, we offer shares trading
+                    as CFD on the world’s most valuable companies such as Apple, Coca Cola, and Facebook.
+                  </p>
+                </div>
 
-              <p class="text text--extra-md color--light-gray mb-3">
-                The FX CFD derivatives market is made up of buyers and sellers, the main participants being large
-                international banks, who place orders via electronic trading systems. This market is traded OTC (not
-                traded on any regulated exchange) and as such there is no uniform price but each of the main
-                international banks is providing its own quotes with the spot market acting as the point of reference
-                for the quotes provided.
-              </p>
+                <div class="col col-12 mb-20px">
+                  <h5 class="text text--lg color--white mb-10px">What you need to know about shares</h5>
+                  <p class="text text--extra-md color--light-gray">
+                    A share is a type of security, that allows an investor to own a part of a company with the right to
+                    vote on management issues and to receive profit based on the results of the corporate work.
+                    Shares are divided into two main types.
+                  </p>
+                </div>
 
-              <p class="text text--extra-md color--light-gray mb-3">
-                It is worth mentioning that the spot FX market is also an OTC market dominated by the large
-                international banks.
-              </p>
+                <div class="col col-12 mb-20px">
+                  <h5 class="text text--lg color--white mb-10px">Ordinary share</h5>
+                  <p class="text text--extra-md color--light-gray">
+                    Securities give its owner the right to take part in management, as well as to participate in the
+                    distribution of dividends. The supreme governing body of an issuer company is the general meeting of
+                    shareholders, decisions at which are taken by voting. An owner of one share has one vote at the
+                    meeting. Naturally, the holder of 1000 shares will have much more authority than the holder of, for
+                    example, 100 papers.
+                  </p>
+                </div>
 
-              <p class="text text--extra-md color--light-gray mb-3">
-                In forex trading, spot price of a currency pair is influenced by several factors, such as the economic
-                outlook and geopolitical events in that region, as well as news data releases which may be perceived
-                positively or negatively by the market.
-              </p>
-
-              <p class="text text--extra-md color--light-gray mb-3">
-                Contracts for difference (CFDs), allow traders to buy (go long) or sell (go short), and make profit or
-                loss from price movements, without having to physically purchase and exchange the underlying currency.
-              </p>
-
-              <p class="text text--extra-md color--light-gray">
-                FX is quoted in pairs, with each representing a global currency or economy. The first currency is called
-                the ‘base’ currency (representing the volume you wish to trade) and the second is called the ‘term’ or
-                ‘quote’ currency (representing the current exchange rate).
-              </p>
+                <div class="col col-12">
+                  <h5 class="text text--lg color--white mb-10px">Preferred share</h5>
+                  <p class="text text--extra-md color--light-gray">
+                    This type of a share guarantees holders an advantage in the distribution of the corporate profits.
+                    Dividends are paid first to the holders of preferred shares, and then to the owners of ordinary
+                    ones. The same applies to the recovery of losses in an event of bankruptcy. But at the same time,
+                    owners of preferred securities are deprived of the right to vote at the shareholder meetings.
+                  </p>
+                </div>
+              </div>
             </div>
 
             <div class="col col-12 col-lg-6">
-              <p class="text text--extra-md color--light-gray mb-3">
-                For example, the price of EUR/USD represents the amount of $USD that can be exchanged for €1.
-              </p>
+              <div class="row">
+                <div class="col col-12 mb-20px">
+                  <h5 class="text text--lg color--white mb-10px">Why do companies issue shares</h5>
+                  <p class="text text--extra-md color--light-gray mb-3">
+                    First of all, that is a tool for raising a company’s capital. These are bought with is put straight
+                    into the business for instance into the development of its production or restocking its working
+                    capital.
+                  </p>
+                  <p class="text text--extra-md color--light-gray">
+                    Secondly, it is an important reputational component of the corporate image. This adds to its
+                    publicity and transparency and attracts potential investors interested in trading. But in order for
+                    the securities of a company to be traded on the stock exchange, they must first be listed.
+                  </p>
+                </div>
 
-              <p class="text text--extra-md color--light-gray mb-3">
-                EUR/USD = 1.11361
-              </p>
+                <div class="col col-12 mb-20px">
+                  <h5 class="text text--lg color--white mb-10px">What is a listing</h5>
+                  <p class="text text--extra-md color--light-gray">
+                    There is a series of procedures that a company needs to go through in order to include its
+                    securities into the Stock list. Each stock exchange tries to protect the interests of its investors
+                    (those who are interested in stocks trading) and therefore seeks to trade only the strongest
+                    issuers. To prove the "quality" of its securities emission, a company has to undergo a series of
+                    checks. Requirements might be made to the size of the share capital, its profitability, size of the
+                    issue, etc.
+                  </p>
+                </div>
 
-              <p class="text text--extra-md color--light-gray mb-3">
-                This means that currently, €1 is equal to $1.11361
-              </p>
+                <div class="col col-12 mb-20px">
+                  <h5 class="text text--lg color--white mb-10px">Stock price</h5>
+                  <p class="text text--extra-md color--light-gray mb-3">
+                    Each issued share has a so-called nominal value. If a physical document is produced, this value is
+                    displayed on the front of the certificate. It is calculated with a simple formula: the total size of
+                    the authorized capital of a company is divided by the number of the papers issued. But the nominal
+                    value does not reflect the real market quotes during shares trading.
+                  </p>
+                  <p class="text text--extra-md color--light-gray">
+                    The emission value of a security is determined after it been listed on the stock exchange. Usually,
+                    it equals to or is slightly higher than the nominal value. Additionally, depending on the corporate
+                    performance, which in turn affects the interest of the investors, the market price will be
+                    determined.
+                  </p>
+                </div>
 
-              <p class="text text--extra-md color--light-gray mb-3">
-                Prices are constantly fluctuating based on market conditions
-              </p>
-
-              <p class="text text--extra-md color--light-gray mb-3">
-                To put it simply, traders would go long if they believe that the base currency will rise in value
-                against the term currency and would profit from an increase in price. On the other hand, if traders’
-                believe that the value of the base currency will fall in relation to the term, they will place a sell
-                trade to try to profit from falling prices. If prices move in the opposite direction to the traders’
-                forecast, they will make a loss
-              </p>
-
-              <p class="text text--extra-md color--light-gray mb-3">
-                FX currency trading is typically calculated in Pips, meaning that depending on your trade size, each pip
-                is equal to a specific monetary value of the ‘term’ currency. This pip value is used to determine the
-                PnL (profit or loss), based on how many pips you gain or lose in a trade, and is also used to display
-                spread (the difference between the bid and ask prices)
-              </p>
-
-              <p class="text text--extra-md color--light-gray mb-3">
-                At FxPro we quote all FX pairs to an extra digit after the pip, meaning that the last digit in any quote
-                refers to a Point (10% of a Pip).
-              </p>
-
-              <p class="text text--extra-md color--light-gray">
-                In FX currency trading, fractional pricing allows us to offer tighter spreads and provide more accurate
-                pricing
-              </p>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col">
-              <div class="bg-block bg-block--md bg-block--dark-gray">
-                <p class="text text--lg color--white">
-                  If you are new to online forex trading, we would recommend going through our online educational
-                  section to familiarise yourself with the market and how ‘Contracts for Difference’ trading works. We
-                  also provide ‘watch and learn’ videos and PDF guides.
-                </p>
+                <div class="col col-12">
+                  <h5 class="text text--lg color--white mb-10px">Online trading with CFD</h5>
+                  <p class="text text--extra-md color--light-gray mb-3">
+                    Stock trading begins with research into finding a broker.
+                  </p>
+                  <p class="text text--extra-md color--light-gray">
+                    In most developed countries, equity investments are used by people as tools to protect and increase
+                    their own savings, so these investments are widely available to anyone. Some prefer to invest money
+                    in stocks of reliable companies that show stable growth and pay dividends. Other investors prefer to
+                    buy shares online to get involved in speculation: looking for potentially undervalued securities,
+                    buying them cheap and selling them later at a higher price. But both of these investment directions
+                    take place in their country and are the driving force of the national economy.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
