--- a/precious-metals.html
+++ b/precious-metals.html
@@ -55,15 +55,15 @@
     </header>
 
     <main>
-      <section class="hero forex-trading-hero">
+      <section class="hero precious-metals-hero">
         <div class="container">
           <div class="row">
             <div class="col col-12 col-md-9 col-lg-8 col-xl-6">
               <div class="title-group">
-                <h1 class="title color--white">Forex Trading</h1>
+                <h1 class="title color--white">Precious Metals</h1>
 
                 <p class="text color--gray">
-                  Trade CFDs on 70+ FX pairs and benefit from tight spreads and fast order execution
+                  Trade CFDs on Spot Metals and unmask new trading opportunities
                 </p>
 
                 <a href="#" class="btn btn--lg btn--arrow -responsive">Registration</a>
@@ -408,111 +408,90 @@
           <div class="row mb-20px">
             <div class="col">
               <div class="bg-block bg-block--inline bg-block--sm bg-block--orange">
-                <p class="text text--sm color--black">What is Forex?</p>
+                <p class="text text--sm color--black">Trade Metals with FxPro</p>
               </div>
             </div>
           </div>
 
           <div class="row mb-40px">
-            <div class="col">
-              <p class="text text--extra-lg color--white">
-                The foreign exchange market (FX) as a whole, consists of many types of markets, including Spot FX, Future
-                derivatives, Forward Derivatives, and finally the CFD derivatives market, which is the most popular for
-                retail clients.
-              </p>
-            </div>
-          </div>
-
-          <div class="row mb-40px">
             <div class="col col-12 col-lg-6 mb-2 mb-lg-0">
-              <p class="text text--extra-md color--light-gray mb-3">
-                All forex trading transactions combined make up the largest and most liquid financial market, with an
-                average daily volume of over $5 trillion.
-              </p>
+              <div class="row">
+                <div class="col col-12 mb-20px">
+                  <p class="text text--extra-md color--light-gray mb-3">
+                    Metals have always been a popular choice among investors and traders, offering not only a way to
+                    preserve capital but also an opportunity to grow it significantly. The most traded metals are gold
+                    and silver, which are traditionally considered "safe-haven" assets during periods of economic
+                    instability.
+                  </p>
+                  <p class="text text--extra-md color--light-gray mb-3">
+                    With FxPro, you can trade not only gold and silver but also platinum, palladium, and aluminum. These
+                    metals offer traders a broad range of opportunities, and with our accurate pricing and competitive
+                    spreads, you can implement your strategies with precision and confidence.
+                  </p>
+                </div>
 
-              <p class="text text--extra-md color--light-gray mb-3">
-                The FX CFD derivatives market is made up of buyers and sellers, the main participants being large
-                international banks, who place orders via electronic trading systems. This market is traded OTC (not
-                traded on any regulated exchange) and as such there is no uniform price but each of the main
-                international banks is providing its own quotes with the spot market acting as the point of reference
-                for the quotes provided.
-              </p>
+                <div class="col col-12 mb-20px">
+                  <h5 class="text text--lg color--white mb-10px">Benefits of Trading Metals with FxPro</h5>
+                  <ul class="list-marked">
+                    <li class="list-marked-item">
+                      <span class="text text--extra-md color--white">Competitive Spreads:</span> 
+                      <span class="text text--extra-md color--light-gray">
+                        FxPro provides tight spreads on all available metals, allowing you to maximize your potential
+                        profits.
+                      </span>
+                    </li>
 
-              <p class="text text--extra-md color--light-gray mb-3">
-                It is worth mentioning that the spot FX market is also an OTC market dominated by the large
-                international banks.
-              </p>
-
-              <p class="text text--extra-md color--light-gray mb-3">
-                In forex trading, spot price of a currency pair is influenced by several factors, such as the economic
-                outlook and geopolitical events in that region, as well as news data releases which may be perceived
-                positively or negatively by the market.
-              </p>
-
-              <p class="text text--extra-md color--light-gray mb-3">
-                Contracts for difference (CFDs), allow traders to buy (go long) or sell (go short), and make profit or
-                loss from price movements, without having to physically purchase and exchange the underlying currency.
-              </p>
-
-              <p class="text text--extra-md color--light-gray">
-                FX is quoted in pairs, with each representing a global currency or economy. The first currency is called
-                the ‘base’ currency (representing the volume you wish to trade) and the second is called the ‘term’ or
-                ‘quote’ currency (representing the current exchange rate).
-              </p>
+                    <li class="list-marked-item">
+                      <span class="text text--extra-md color--white">Accurate Pricing:</span> 
+                      <span class="text text--extra-md color--light-gray">
+                        Our advanced technology ensures real-time, accurate quotes for all metals.
+                      </span>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
 
             <div class="col col-12 col-lg-6">
-              <p class="text text--extra-md color--light-gray mb-3">
-                For example, the price of EUR/USD represents the amount of $USD that can be exchanged for €1.
-              </p>
+              <div class="row">
+                <div class="col col-12 mb-20px">
+                  <ul class="list-marked mb-3">
+                    <li class="list-marked-item">
+                      <span class="text text--extra-md color--white">Volatility and Earning Potential:</span> 
+                      <span class="text text--extra-md color--light-gray">
+                        Metals like gold and silver are known for their significant price volatility, which creates
+                        opportunities for short-term and medium-term trading.
+                      </span>
+                    </li>
 
-              <p class="text text--extra-md color--light-gray mb-3">
-                EUR/USD = 1.11361
-              </p>
+                    <li class="list-marked-item">
+                      <span class="text text--extra-md color--white">Long-Term Stability:</span> 
+                      <span class="text text--extra-md color--light-gray">
+                        Unlike other asset classes, metals retain long-term value, making them a popular choice for
+                        investors looking to safeguard their wealth.
+                      </span>
+                    </li>
 
-              <p class="text text--extra-md color--light-gray mb-3">
-                This means that currently, €1 is equal to $1.11361
-              </p>
+                    <li class="list-marked-item">
+                      <span class="text text--extra-md color--white">Safe Investment Option:</span> 
+                      <span class="text text--extra-md color--light-gray">
+                        Trading metals is often seen as a reliable investment, particularly in times of economic
+                        uncertainty and market turbulence.
+                      </span>
+                    </li>
+                  </ul>
+                </div>
 
-              <p class="text text--extra-md color--light-gray mb-3">
-                Prices are constantly fluctuating based on market conditions
-              </p>
+                <div class="col col-12">
+                  <h5 class="text text--lg color--white mb-10px">Get Started with Your First Trades</h5>
 
-              <p class="text text--extra-md color--light-gray mb-3">
-                To put it simply, traders would go long if they believe that the base currency will rise in value
-                against the term currency and would profit from an increase in price. On the other hand, if traders’
-                believe that the value of the base currency will fall in relation to the term, they will place a sell
-                trade to try to profit from falling prices. If prices move in the opposite direction to the traders’
-                forecast, they will make a loss
-              </p>
-
-              <p class="text text--extra-md color--light-gray mb-3">
-                FX currency trading is typically calculated in Pips, meaning that depending on your trade size, each pip
-                is equal to a specific monetary value of the ‘term’ currency. This pip value is used to determine the
-                PnL (profit or loss), based on how many pips you gain or lose in a trade, and is also used to display
-                spread (the difference between the bid and ask prices)
-              </p>
-
-              <p class="text text--extra-md color--light-gray mb-3">
-                At FxPro we quote all FX pairs to an extra digit after the pip, meaning that the last digit in any quote
-                refers to a Point (10% of a Pip).
-              </p>
-
-              <p class="text text--extra-md color--light-gray">
-                In FX currency trading, fractional pricing allows us to offer tighter spreads and provide more accurate
-                pricing
-              </p>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col">
-              <div class="bg-block bg-block--md bg-block--dark-gray">
-                <p class="text text--lg color--white">
-                  If you are new to online forex trading, we would recommend going through our online educational
-                  section to familiarise yourself with the market and how ‘Contracts for Difference’ trading works. We
-                  also provide ‘watch and learn’ videos and PDF guides.
-                </p>
+                  <p class="text text--extra-md color--light-gray">
+                    FxPro offers you the opportunity to practice trading metals without risk by using a free demo
+                    account. It’s the perfect way to familiarize yourself with the platform and test your strategies
+                    before transitioning to a live account. Once you're ready, you can seamlessly start trading real
+                    metals like gold, silver, palladium, platinum, and aluminum to profit from market movements.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
