--- a/futures-trading.html
+++ b/futures-trading.html
@@ -172,7 +172,7 @@
                   </p>
                 </div>
 
-                <a href="#" class="btn btn--lg btn--arrow -responsive">Start Trading</a>
+                <a href="#" class="btn btn--lg btn--outline btn--arrow -responsive">Learn more about our execution model</a>
 
               </div>
             </div>
