--- a/cfds-on-energy.html
+++ b/cfds-on-energy.html
@@ -58,12 +58,12 @@
       <section class="hero cfds-on-energy-hero">
         <div class="container">
           <div class="row">
-            <div class="col col-12 col-md-9 col-lg-8 col-xl-6">
+            <div class="col col-12 col-md-9 col-lg-8 col-xl-5">
               <div class="title-group">
-                <h1 class="title color--white">Precious Metals</h1>
+                <h1 class="title color--white">Crypto CFD Trading</h1>
 
                 <p class="text color--gray">
-                  Trade CFDs on Spot Metals and unmask new trading opportunities
+                  Trade CFDs on Cryptocurrencies with the World’s #1 FX Broker
                 </p>
 
                 <a href="#" class="btn btn--lg btn--arrow -responsive">Registration</a>
