--- a/account-types.html
+++ b/account-types.html
@@ -11,8 +11,8 @@
   <link rel="manifest" href="https://velmoren.github.io/bbvc/site.webmanifest" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BBVC</title>
-  <script type="module" crossorigin src="https://velmoren.github.io/bbvc/assets/main--kMwDOJR.js"></script>
-  <link rel="stylesheet" crossorigin href="https://velmoren.github.io/bbvc/assets/main-DTkkfre4.css">
+  <script type="module" crossorigin src="https://velmoren.github.io/bbvc/assets/main-DtVof6VK.js"></script>
+  <link rel="stylesheet" crossorigin href="https://velmoren.github.io/bbvc/assets/main-DhcUQj2r.css">
 </head>
 
 <body>
@@ -97,7 +97,7 @@
             </div>
           </div>
         
-          <div class="row mb-5">
+          <div class="row">
             <div class="col">
 
               <div class="account-types__slider">
