--- a/account-types.html
+++ b/account-types.html
@@ -55,6 +55,24 @@
     </header>
 
     <main>
+      <section class="hero account-types-hero">
+        <div class="container">
+          <div class="row">
+            <div class="col col-12 col-md-9 col-lg-7 col-xl-5">
+              <div class="title-group">
+                <h1 class="title color--white">Account types</h1>
+
+                <p class="text color--gray">
+                  Choose your suitable financial account type for successful trading.
+                </p>
+
+                <a href="#" class="btn btn--lg btn--arrow -responsive">Registration</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <section class="account-types splide">
         <div class="container">
           <div class="row mb-5">
@@ -77,7 +95,7 @@
             </div>
           </div>
         
-          <div class="row mb-5">
+          <div class="row">
             <div class="col">
 
               <div class="account-types__slider">
