--- a/index.html
+++ b/index.html
@@ -31,8 +31,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarScroll">
               <ul class="navbar-nav m-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                <li class="nav-item">
-                  <a class="nav-link active" href="/">Trade</a>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Trade
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/">Forex</a></li>
+                    <li><a class="dropdown-item" href="/">Futures</a></li>
+                  </ul>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/">Investments</a>
@@ -560,7 +566,7 @@
                 </div>
               </div>
 
-              <div class="col col-6 col-sm-4 col-lg-4">
+              <div class="col col-6 col-sm-4 col-lg-5">
                 <div class="footer-nav__links">
                   <h5 class="footer-nav__links--title">Analytics</h5>
                   <ul class="footer-nav__links--list">
@@ -574,7 +580,7 @@
                 </div>
               </div>
 
-              <div class="col col-6 col-sm-4 col-lg-4">
+              <div class="col col-6 col-sm-4 col-lg-3">
                 <div class="footer-nav__links">
                   <h5 class="footer-nav__links--title">Documents</h5>
                   <ul class="footer-nav__links--list">
@@ -589,6 +595,48 @@
               </div>
 
             </div>
+          </div>
+        </div>
+
+        <div class="row my-50px">
+          <div class="col">
+            <hr>
+          </div>
+        </div>
+        
+        <div class="row">
+          <div class="col">
+            <div class="footer-creditionals">
+              <div class="footer-creditionals__item">
+                <p class="text text--sm color--white">57 Coombe Lea, Grand Avenue Hove</p>
+                <h5 class="text text--lg color--white">United Kingdom</h5>
+              </div>
+              <div class="footer-creditionals__item">
+                <a class="text text--lg color--white" href="tel:1234567890">123-456-7890</a>
+                <a class="text text--sm color--white" href="mailto:support@broker.com">support@broker.com</a>
+              </div>
+              <div class="footer-creditionals__item">
+                <div class="footer-creditionals__item--socials">
+                  <a href="#">
+                    <img src="/images/socials/x.svg" alt="x">
+                  </a>
+
+                  <a href="#">
+                    <img src="/images/socials/telegram.svg" alt="telegram">
+                  </a>
+
+                  <a href="#">
+                    <img src="/images/socials/facebook.svg" alt="facebook">
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row my-50px">
+          <div class="col">
+            <hr>
           </div>
         </div>
 
