--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
           <div class="container-fluid p-0">
             <a class="navbar-brand header-logo" href="/era-of-superio-dev/">
               <img class="logo-image" src="/images/logo.svg" alt="logo">
-              <span>bbvc</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
               aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,21 +32,36 @@
               <ul class="navbar-nav m-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Trade
+                    Trading
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/">Trading Platform</a></li>
+                    <li><a class="dropdown-item" href="/">NDD Execution</a></li>
+                    <li><a class="dropdown-item" href="/">Account Types</a></li>
+                    <li><a class="dropdown-item" href="/">Payment Methods</a></li>
+                    <li><a class="dropdown-item" href="/">Trading Tools</a></li>
+                    <li><a class="dropdown-item" href="/">Economic Calendar</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Markets
                   </a>
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="/">Forex</a></li>
                     <li><a class="dropdown-item" href="/">Futures</a></li>
+                    <li><a class="dropdown-item" href="/">Indices</a></li>
+                    <li><a class="dropdown-item" href="/">Stocks</a></li>
+                    <li><a class="dropdown-item" href="/">Metals</a></li>
+                    <li><a class="dropdown-item" href="/">Energy</a></li>
+                    <li><a class="dropdown-item" href="/">Cryptos</a></li>
                   </ul>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/">Investments</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/">Company</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/">Contacts</a>
+                  <a class="nav-link" href="/">Documents</a>
                 </li>
               </ul>
 
@@ -199,8 +213,8 @@
           <div class="row">
             <div class="col">
               <div class="title-group__wrapper -centered mb-5">
-                <div class="title-group" style="max-width: 500px;">
-                  <h2 class="title title--md color--black">
+                <div class="title-group align-items-center" style="max-width: 600px;">
+                  <h2 class="title title--md color--black d-flex flex-wrap">
                     Why Choose Us
 
                     <img src="/images/logo.svg" alt="logo">
@@ -522,8 +536,7 @@
           <div class="col col-12 col-lg-5">
             <div class="footer-nav__main h-100">
               <a class="footer-nav__logo footer-logo" href="/">
-                <img class="logo-image" src="/images/logo.svg" alt="logo">
-                <span>bbvc</span>
+                <img class="logo-image" src="/images/logo-dark.svg" alt="logo">
               </a>
 
               <div class="footer-nav__bank-list">
@@ -550,50 +563,51 @@
           </div>
 
           <div class="col col-12 col-lg-7">
-            <div class="row footer-nav__box">
-
-              <div class="col col-6 col-sm-4 col-lg-4">
-                <div class="footer-nav__links">
-                  <h5 class="footer-nav__links--title">Pages</h5>
-                  <ul class="footer-nav__links--list">
-                    <li><a href="/">Trading</a></li>
-                    <li><a href="/">Partnership</a></li>
-                    <li><a href="/">Account types</a></li>
-                    <li><a href="/">Regulator</a></li>
-                    <li><a href="/">About Us</a></li>
-                    <li><a href="/">Contacts</a></li>
-                  </ul>
-                </div>
+            <div class="footer-nav__wrapper">
+              <div class="footer-nav__links">
+                <h5 class="footer-nav__links--title">Trading</h5>
+                <ul class="footer-nav__links--list">
+                  <li><a href="/">Trading Platform</a></li>
+                  <li><a href="/">NDD Execution</a></li>
+                  <li><a href="/">Account types</a></li>
+                  <li><a href="/">Payment Methods</a></li>
+                  <li><a href="/">Trading Tools</a></li>
+                  <li><a href="/">Economic Calendar</a></li>
+                </ul>
               </div>
 
-              <div class="col col-6 col-sm-4 col-lg-5">
-                <div class="footer-nav__links">
-                  <h5 class="footer-nav__links--title">Analytics</h5>
-                  <ul class="footer-nav__links--list">
-                    <li><a href="/">Technical Analysis</a></li>
-                    <li><a href="/">Economic calendar</a></li>
-                    <li><a href="/">Trading instruments</a></li>
-                    <li><a href="/">Financial market</a></li>
-                    <li><a href="/">Glossary</a></li>
-                    <li><a href="/">Spreads</a></li>
-                  </ul>
-                </div>
+              <div class="footer-nav__links">
+                <h5 class="footer-nav__links--title">Markets</h5>
+                <ul class="footer-nav__links--list">
+                  <li><a href="/">Forex</a></li>
+                  <li><a href="/">Futures</a></li>
+                  <li><a href="/">Indices</a></li>
+                  <li><a href="/">Stocks</a></li>
+                  <li><a href="/">Metals</a></li>
+                  <li><a href="/">Energy</a></li>
+                  <li><a href="/">Cryptos</a></li>
+                </ul>
               </div>
 
-              <div class="col col-6 col-sm-4 col-lg-3">
-                <div class="footer-nav__links">
-                  <h5 class="footer-nav__links--title">Documents</h5>
-                  <ul class="footer-nav__links--list">
-                    <li><a href="/">Privacy Policy</a></li>
-                    <li><a href="/">AML Policy</a></li>
-                    <li><a href="/">Risk Disclosure</a></li>
-                    <li><a href="/">User Agreement</a></li>
-                    <li><a href="/">KYC Policy</a></li>
-                    <li><a href="/">Terms of use</a></li>
-                  </ul>
-                </div>
+              <div class="footer-nav__links">
+                <h5 class="footer-nav__links--title">Documents</h5>
+                <ul class="footer-nav__links--list">
+                  <li><a href="/">Privacy Policy</a></li>
+                  <li><a href="/">Risk Disclosure</a></li>
+                  <li><a href="/">User Agreement</a></li>
+                  <li><a href="/">AML Policy</a></li>
+                  <li><a href="/">KYC Policy</a></li>
+                </ul>
               </div>
 
+              <div class="footer-nav__links">
+                <h5 class="footer-nav__links--title">Company</h5>
+                <ul class="footer-nav__links--list">
+                  <li><a href="/">About Us</a></li>
+                  <li><a href="/">Credit Rating</a></li>
+                  <li><a href="/">Contacts</a></li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
