--- a/index.html
+++ b/index.html
@@ -43,17 +43,18 @@
               </div>
 
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
-              aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-              <span></span>
-              <span></span>
-              <span></span>
-            </button>
+                aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                <span></span>
+                <span></span>
+                <span></span>
+              </button>
             </div>
 
             <div class="collapse navbar-collapse" id="navbarScroll">
               <ul class="navbar-nav m-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
                     Trading
                   </a>
                   <ul class="dropdown-menu">
@@ -66,7 +67,8 @@
                   </ul>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
                     Markets
                   </a>
                   <ul class="dropdown-menu">
@@ -180,7 +182,7 @@
 
                         <h2 class="text text--lg color--black">Investments</h2>
                       </div>
-  
+
                       <p class="text text--sm color--dark-gray">
                         Build your financial future by exploring a variety of investment options tailored to your goals
                       </p>
@@ -193,13 +195,13 @@
 
                         <h2 class="text text--lg color--black">Digital Assets</h2>
                       </div>
-  
+
                       <p class="text text--sm color--dark-gray text-start text-lg-end">
                         Step into the future of finance with secure and efficient trading of digital currencies
                       </p>
                     </div>
                   </div>
-  
+
                   <div class="partner-row">
                     <div class="partner-row__item">
                       <div class="partner-row__item__head">
@@ -209,7 +211,7 @@
 
                         <h2 class="text text--lg color--black">Currency Exchange</h2>
                       </div>
-  
+
                       <p class="text text--sm color--dark-gray">
                         Capitalize on currency fluctuations with real-time insights and advanced trading tools
                       </p>
@@ -222,7 +224,7 @@
 
                         <h2 class="text text--lg color--black">Global Markets</h2>
                       </div>
-  
+
                       <p class="text text--sm color--dark-gray text-start text-lg-end">
                         Access opportunities across global markets and diversify your portfolio with confidence
                       </p>
@@ -650,7 +652,7 @@
             <hr>
           </div>
         </div>
-        
+
         <div class="row">
           <div class="col">
             <div class="footer-creditionals">
