--- a/cfds-on-energy.html
+++ b/cfds-on-energy.html
@@ -60,10 +60,10 @@
           <div class="row">
             <div class="col col-12 col-md-9 col-lg-8 col-xl-5">
               <div class="title-group">
-                <h1 class="title color--white">Crypto CFD Trading</h1>
+                <h1 class="title color--white">CFDs on Energy</h1>
 
                 <p class="text color--gray">
-                  Trade CFDs on Cryptocurrencies with the World’s #1 FX Broker
+                  Trade CFDs on Spot Energy such as Brent oil, WTI and Natural Gas and diversify your portfolio
                 </p>
 
                 <a href="#" class="btn btn--lg btn--arrow -responsive">Registration</a>
@@ -172,7 +172,8 @@
                   </p>
                 </div>
 
-                <a href="#" class="btn btn--lg btn--outline btn--arrow -responsive">Learn more about our execution model</a>
+                <a href="#" class="btn btn--lg btn--outline btn--arrow -responsive">Learn more about our execution
+                  model</a>
 
               </div>
             </div>
@@ -393,18 +394,71 @@
           <div class="row mb-20px">
             <div class="col">
               <div class="bg-block bg-block--inline bg-block--sm bg-block--orange">
-                <p class="text text--sm color--black">What Are Cryptocurrency CFDs?</p>
+                <p class="text text--lg color--black">Trade Metals with FxPro</p>
               </div>
             </div>
           </div>
 
-          <div class="row mb-40px">
-            <div class="col col-12">
+          <div class="row">
+            <div class="col col-12 col-lg-6 mb-2 mb-lg-0">
               <p class="text text--extra-md color--light-gray mb-3">
-                Cryptocurrency CFDs are digital, decentralized financial instruments that were created to mirror the value of cryptocurrencies and work as a medium of exchange. The cryptocurrency CFD market offers traders a new way of investing, free from intermediaries such as governments or rating agencies. Hence, price movements in cryptocurrency CFDs are driven by a multitude of factors such as market demand and relevant news.
+                Here at FxPro, we offer our clients trading on spot energy, such as Brent, WTI and Natural Gas,
+                which are considered to be the most important raw material resources on the planet.
               </p>
               <p class="text text--extra-md color--light-gray mb-3">
-                At FxPro, clients can trade cryptocurrencies as CFDs in pairs with USD. Choose your cryptocurrency CFD, go long or short and capitalise on price trend changes.
+                Review the assets above and discover the possibility of new trading opportunities in the financial
+                market.
+              </p>
+              <p class="text text--extra-md color--light-gray mb-3">
+                CFDs on energy are a popular choice for short-term trading, especially when there is a surge in
+                energy consumption, as during periods of active growth, demand increases. Prices are determined by
+                global supply and demand for the physical product.
+              </p>
+              <p class="text text--extra-md color--light-gray mb-3">
+                Often referred to as “black gold”, Oil is usually denominated in U.S. Dollars (hence the term
+                ‘Petrodollar’), so a weak dollar will commonly cause Oil prices to rise, as the price of the product
+                is directly influenced by the value of the currency.
+              </p>
+              <p class="text text--extra-md color--light-gray mb-3">
+                Oil-producing nations have a dramatic effect on the supply, and therefore the price, as they may
+                withdraw or boost the physical quantity of barrels available in the market.
+              </p>
+              <p class="text text--extra-md color--light-gray mb-3">
+                For example, since the mid-90s, the US imposed sanctions on Iran have prevented Iranian oil from
+                entering the marketplace, widening the gap between supply and demand which results in higher prices.
+                Another noteworthy event occurred in 2014 when a much lower demand from the EU and China caused a
+                sharp decrease due to the excess supply. For
+              </p>
+            </div>
+
+            <div class="col col-12 col-lg-6">
+              <p class="text text--extra-md color--light-gray mb-3">
+                many years, the US government has been building up its oil reserves and should these be released to the
+                market, or used domestically, energy prices may drop sharply as a result.
+              </p>
+              <p class="text text--extra-md color--light-gray mb-3">
+                In the case of NatGas, an alternative energy commodity to oil, historical analysis shows a general
+                correlation between the two, considering that natural gas is often released during the oil drilling
+                process, and they are commonly produced by the same companies or nations.
+              </p>
+              <p class="text text--extra-md color--light-gray mb-3">
+                In conclusion, a multitude of economic factors can affect the price of energy, including inflation
+                rates, political or military tensions in producing nations, natural disasters, production costs and of
+                course, OPEC decisions.
+              </p>
+              <p class="text text--extra-md color--light-gray mb-3">
+                Trading CFDs on energy allows you to speculate on price movement, without having to physically acquire
+                the underlying asset. As prices fluctuate, traders make profit or loss depending on their position and
+                direction in the market. Learn more by visiting our Educational Section, and feel free to practice
+                trading on spot energy on our free demo account before going live.
+              </p>
+              <p class="text text--extra-md color--light-gray mb-3">
+                Select an asset above to see real-time charts of spot energy, and start trading with FxPro today, for
+                the ability to buy or sell energy CFDs (Contract for Difference) through our award-winning trading
+                platforms.
+              </p>
+              <p class="text text--extra-md color--light-gray mb-3">
+                Trade spot energy with FxPro!
               </p>
             </div>
           </div>
